sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:17: error: not found: value i
        move(i,1)
             ^NaiveBaseball:20: error: not found: value i
        move(i,0)
             ^